--- a/TODO
+++ b/TODO
@@ -9,8 +9,14 @@ CODING
 - chat for stream page?
 - ANU universe gif collage
 - poll data from influxdb server
+- dashboard mobile view
+- refresh canvas size
+- sound on BG change
 
 TEXTS
+- contact page
+- where should invocations go?
+- links in text
 - about page with more info about peeps
 - signal diagram
 
